# vaggaTestPyGObjectCallback

./: .gitignore  issue.txt  meson.build  pygobjectIssue.txt  readme.md  testCallback.c  testCallback.h  testCallback.py  testCallbackGList.c  testCallbackGList.h  testCallbackGList.py  testCallbackPersistent.c  testCallbackPersistent.h  testCallbackPersistent.py  vagga.yaml
cruft/: testCallback.h  testCallbackPersistentGList.py
